# hexgrpc

./: .dockerignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.base  README.md
.github/workflows/: build-base.yml  build.yml  cloud-run.yml
apps/: CMakeLists.txt  hexclientcli.cpp  hexservercli.cpp
hexlib/: CMakeLists.txt  HexagonClient.cpp  HexagonService.cpp
hexlib/protos/: hexagon.proto
include/hexlib/: Hexagon.hpp  HexagonClient.hpp  HexagonLibrary.hpp  HexagonService.hpp
package/: Dockerfile
tests/: CMakeLists.txt  HexagonLibraryTest.cpp  Test1.hpp  test1.cpp
